<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/note"
        android:title="@string/笔记和工具" />
    <item
        android:id="@+id/huidiao"
        android:title="@string/回调" />

    <item
        android:id="@+id/componentinterreact"
        android:title="@string/组件交互" />
    <item
        android:id="@+id/network"
        android:title="@string/网络相关" />
    <item
        android:id="@+id/customizedview"
        android:title="@string/view" />
    <item
        android:id="@+id/architecture"
        android:title="@string/android_architecture" />
    <item
        android:id="@+id/componentfinterreact"
        android:title="@string/观察者模式" />
    <item
        android:id="@+id/algorithm"
        android:title="@string/algorithm" />
    <item
        android:id="@+id/dataStructure"
        android:title="@string/dataStructure" />
    <item
        android:id="@+id/opengl"
        android:title="@string/opengl" />
    <item
        android:id="@+id/frame"
        android:title="@string/frame" />
    <item
        android:id="@+id/utilDemo"
        android:title="@string/utildemo" />
    <item
        android:id="@+id/javaDesignPattern"
        android:title="@string/javadesignpattern" />
</menu>