<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_roundedcorner_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:shadowColor="@color/colorread"
            android:shadowDx="@integer/there"
            android:shadowDy="@integer/there"
            android:shadowRadius="5"
            android:text="@string/welcome_back"
            android:textAllCaps="false"
            android:textColor="@color/colorread"
            android:textSize="29sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_wrapper_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_wrapper_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:padding="8dp">

            <FrameLayout

                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/tv_cancel">

                <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.MaterialProgressBar.ProgressBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    app:mpb_progressStyle="circular" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:background="@color/colorwhite"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/btn_login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:background="@color/colorwhite"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/btn_cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>